<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="235dp"
        android:layout_height="265dp"
        android:layout_marginTop="85dp"
        android:contentDescription="@string/appLogoContentDescription"
        app:layout_constraintBottom_toTopOf="@+id/appName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:fontFamily="@font/manrope_semibold"
        android:text="@string/appName"
        android:textAlignment="center"
        android:textColor="@color/defaultFontColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/getStartedButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/getStartedButton"
        android:layout_width="210dp"
        android:layout_height="64dp"
        android:layout_marginBottom="88dp"
        android:backgroundTint="@color/purple_200"
        android:fontFamily="@font/manrope_medium"
        android:includeFontPadding="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/getStartedButtonText"
        android:textColor="@color/purple_500"
        android:textSize="16sp"
        app:cornerRadius="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>