<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/backgroundColor">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/actionBarItemBackground"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/backButtonContentDescription"
        android:scaleType="center"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"
        app:tint="@color/backButtonBackgroundColor" />

    <TextView
        android:id="@+id/appVersion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/manrope_medium"
        android:text="@string/appVersion"
        android:textAlignment="center"
        android:textColor="@color/subtextColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/supportButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/manrope_semibold"
        android:text="@string/appName"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/appVersion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/halfScreenGuideline"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/appLogoContentDescription"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/halfScreenGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintWidth_percent="0.5"
        app:srcCompat="@drawable/ic_logo" />

    <Button
        android:id="@+id/supportButton"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/nextButtonBackgroundColor"
        android:fontFamily="@font/manrope_medium"
        android:includeFontPadding="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/supportText"
        android:textColor="@color/nextButtonTextColor"
        android:textSize="16sp"
        app:cornerRadius="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appVersion" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/halfScreenGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

</androidx.constraintlayout.widget.ConstraintLayout>