<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/actionBarItemBackground"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/backButtonContentDescription"
        android:scaleType="center"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:tint="@color/purple_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/actionsPickingRecycler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        app:layout_constraintBottom_toTopOf="@+id/actionsPickHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/actionsPickHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/manrope_semibold"
        android:text="@string/chooseActionsForHomeScreenText"
        android:textAlignment="center"
        android:textColor="@color/defaultFontColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionsPickingRecycler" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="210dp"
        android:layout_height="64dp"
        android:layout_marginBottom="88dp"
        android:backgroundTint="@color/purple_200"
        android:fontFamily="@font/manrope_medium"
        android:includeFontPadding="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/nextButtonText"
        android:textColor="@color/purple_500"
        android:textSize="16sp"
        app:cornerRadius="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>