<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragments.InterfaceScalePickFragment">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/actionBarItemBackground"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/backButtonContentDescription"
        android:scaleType="center"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:tint="@color/purple_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <com.delet_dis.elementarylauncher.common.view.AppCardView
        android:id="@+id/exampleCard"
        android:layout_width="200dp"
        android:layout_height="190dp"
        app:layout_constraintBottom_toTopOf="@+id/scaleHintText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scaleHintText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/manrope_semibold"
        android:text="@string/chooseInterfaceScaleText"
        android:textAlignment="center"
        android:textColor="@color/defaultFontColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/interfaceScaleSeekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/interfaceScaleSeekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:progressBackgroundTint="@color/purple_500"
        android:progressTint="@color/purple_500"
        android:secondaryProgressTint="@color/purple_500"
        android:thumb="@drawable/seekbar_thumb"
        android:thumbTint="@color/purple_200"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tickMark="@drawable/seekbar_tickmark" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="210dp"
        android:layout_height="64dp"
        android:layout_marginBottom="88dp"
        android:backgroundTint="@color/purple_200"
        android:fontFamily="@font/manrope_medium"
        android:includeFontPadding="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/nextButtonText"
        android:textColor="@color/purple_500"
        android:textSize="16sp"
        app:cornerRadius="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>